Changes in Version 1.0-1

    o   Replaced 'memcpy' calls in C-code with 'for' loops because they
        were used for small objects.

    o   Improve R-Code for 'alloca' calls (adding 'R_CheckStack()'
        after calls)

Changes in Version 1.0-0

    o    Added vignette.
    
    o    Update references.
    
    o    Improve documentation for formulas.
    
    o    The 'data' slot of 'tvcm' object newly includes several
         variables used for fitting. These data are cleaned with
	 respect to missing values, but no transformations are applied.

    o    In 'fvcolmm_control' the 'alpha' argument has mistakingly been
         ignored. Bug fix.

    o    Added new warnings for 'tvcglm_control'.

    o    Bug fix: for 'tvcglm_control' and 'tvcolmm_control' the '...'
         arguments have previously been ignored.

    o    added default for 'minsize' to 'fvcm_control' and 'fvcglm_control'. 

    o    Add new argument 'fitargs' to 'tvcm'. Allows to pass arguments for
         the fitting function in 'tvcm' and 'fvcm'. This was possible before
         via the '...', but leads to argument name clashes in some cases. See
         the help of 'tvcm'.

    o    Improve the help of 'vcpart-formula'.

    o    fixed an unnecessary error case in 'tvcm_folds'.

    o    add check for the response variable in 'olmm'.

    o    bug fix for 'predict.fvcm'.

    o    bug fix in for internal C function 'olmm_setPar'.

Changes in Version 0.4-2

    o    Update of citation info

    o    modified 'olmm_control' for the 'optim' optimizier. Now
         'BFGS' is set as the default and a warning is shown
         if a non-gradient based method is chosen while 'numGrad = FALSE'.

    o    Enable option 'sparse' for function 'contr.wsum'.

    o    Improved C-code for olmm. Does not have impacts for users. Please
         report if any changes appear.

Changes in Version 0.4-1

    o    Changed titles in 'panel_coef', 'tvcm.print' and 'tvcm.summary'
